# Plant-Health-Plus

./: .gitmodules  CMakeLists.txt  ReadMe.md  addplantdialog.cpp  build.bat  build.sh  images.qrc  mainwindow.h  mainwindow.ui  vcpkg.json
PlantHealthPlus/: CMakeLists.txt  ReadMe.md  addplantdialog.h  conditionchart.cpp  conditionchart.h  forecastclient.cpp  forecastclient.h  images.qrc  logbookentrydialog.cpp  logbookentrydialog.h  logbookmanager.cpp  logbookmanager.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plantcard.cpp  plantcard.h  plantmanager.cpp  plantmanager.h  rangeindicator.h  resources.qrc  scraper.cpp  testrunner.cpp  testrunner.h  testrunner_complex.cpp  testrunner_old.h  usermanager.cpp  usermanager.h  vcpkg.json
PlantHealthPlus copy/: CMakeLists.txt  addplantdialog.cpp  mainwindow.cpp  mainwindow.ui  plantpediaentry.h  plantpediamanager.cpp  plantpediamanager.h  plantpediawidget.cpp  plantpediawidget.h  rangeindicator.cpp  scraper.cpp  scraper.h  vcpkg.json
PlantHealthPlus/images/: PHPlus_logo.icns
PlantHealthPlus/tests/: CMakeLists.txt  README.md  comprehensive_tests.cpp  run_tests.sh  test_addplantdialog.cpp  test_addplantdialog.h  test_conditionchart.cpp  test_conditionchart.h  test_forecastclient.cpp  test_forecastclient.h  test_logbookentrydialog.cpp  test_logbookentrydialog.h  test_logbookmanager.cpp  test_logbookmanager.h  test_main.cpp  test_plantcard.cpp  test_plantcard.h  test_plantmanager.cpp  test_plantmanager.h  test_plantmanager_complex.h  test_rangeindicator.cpp  test_rangeindicator.h  test_results.txt  test_runner.cpp  test_scraper.cpp  test_scraper.h  test_usermanager.cpp  test_usermanager.h
